css/home.css
.masthead {
	margin-top: 70px;
	background-color: var(--grey4);
}

.masthead-wrap {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: row;
	-webkit-flex-direction: row;
	padding-top: 30px;
	height: 100%;
	width: 100%;
}

.masthead-graphic {
	height: 40vh;
	max-height: 500px;
	min-height: 300px;
}

.masthead-title {
	font-family: 'Raleway', sans-serif;
	padding-left: 30px;
	width: 30vw;
	text-align: center;
	font-size: calc(2vw + 20px);
	color: var(--grey2);
	/*font-weight: 900;*/
}

.header-title {
	font-family: 'Montserrat', sans-serif;
	padding: calc(370px + 6vh - 6vw) 0px 0px 50px;
	color: white;
	font-weight: 700px;
	font-size: calc(5vw + 50px);
}

.two-block-par {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: row;
	-webkit-flex-direction: row;
	padding: 50px 20px;
	max-width: 70%;
	margin: auto;
}

.two-block-par h2 {
	font-family: 'Raleway', sans-serif;
	font-weight: 700;
	padding: 20px;
	text-align: center;
	height: 100%;
}

.two-block-par h2 {
	color: var(--grey2);
	text-align: right;
	border-bottom: none;
	border-right: 2px var(--grey3) solid;
}

.dark-grey .two-block-par h2 {
	color: var(--grey3);
	border-bottom: none;
	border-right: 2px var(--grey2) solid;
}

.dark-grey p {
	color: #b0b0b0;
	text-align: left;
}

.two-block-par * {
	margin: 10px;
}

.contact {
	margin: 5px 0;
}

.contact-list {
	flex-direction: column;
	-webkit-flex-direction: column;
}

.contact-text {
	display: block;
}

.contact-text {
	color: var(--gold1);
}

.contact-icon {
	padding: 0px;
	margin: 0px;
}

.contact {
	opacity: 1;
}

iframe {
	display: block;
	margin-left: auto;
	margin-right: auto;
	border-style: none;
}

#videowrapper {
	width: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
	padding-top: 80px;
}

.video {
	overflow: hidden;
	width: 50%;
	padding-bottom: 28.125%;
	position: relative;
}

.video iframe {
	position: absolute;
	left: 0;
	top: 0;
	height: 100%;
	width: 100%;
}

/*
.contact:hover{
	filter: brightness(85%);
}
*/

@media screen and (max-width: 800px) {
	.masthead-wrap {
		flex-direction: column-reverse;
		-webkit-flex-direction: column-reverse;
	}
	.two-block-par {
		flex-direction: column;
		-webkit-flex-direction: column;
	}
	.masthead-title {
		padding-left: 0px;
		width: 70%;
	}
	.contact-text {
		display: none;
	}
	.contact-list {
		flex-direction: row-reverse;
		-webkit-flex-direction: row-reverse;
	}
	.contact-icon {
		padding: 0px 5px;
	}
	.two-block-par h2 {
		text-align: center;
		border-bottom: 2px var(--grey3) solid;
		border-right: none;
	}
	.dark-grey .two-block-par h2 {
		border-right: none;
		border-bottom: 2px var(--grey2) solid;
	}
	#video {
		width: 80%;
		padding-bottom: 45%
	}
}

